Upgraded groovy and some minor deprecation updates