@@ -593,7 +593,7 @@ public class AgentService extends RouteBuilder implements ContainerService, Asse
             .filter(agentAttribute -> agentAttribute.key != null)
             .collect(Collectors.groupingBy(
                 agentAttribute -> agentAttribute.key,
-                mapping(agentAttribute -> agentAttribute.value, toList())
+                    Collectors.collectingAndThen(Collectors.toList(), agentAttribute -> agentAttribute.stream().map(item->item.value).collect(toList())) //TODO had to change to this because compiler has issues with inferring types, need to check for a better solution
             ));
     }
 
@@ -708,7 +708,7 @@ public class AgentService extends RouteBuilder implements ContainerService, Asse
             }
 
             try {
-                ProtocolInstanceDiscovery instanceDiscovery = instanceDiscoveryProviderClass.newInstance();
+                ProtocolInstanceDiscovery instanceDiscovery = instanceDiscoveryProviderClass.getDeclaredConstructor().newInstance();
                 Future<Void> discoveryFuture = instanceDiscovery.startInstanceDiscovery(onDiscovered);
                 discoveryFuture.get();
             } catch (InterruptedException e) {
